kubernetes/workloads/registry/manifests/base/namespace.yaml
---
# yamllint disable rule:line-length
apiVersion: v1
kind: Namespace
metadata:
  name: registry
