kubernetes/workloads/registry/manifests/base/deployment.yaml
---
# yamllint disable rule:line-length
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registry-deployment
  namespace: registry
  labels:
    app: registry
spec:
  replicas: 1
  selector:
    matchLabels:
      app: registry
  template:
    metadata:
      labels:
        app: registry
    spec:
      serviceAccountName: registry-sa
      containers:
        - name: registry
          image: docker.io/library/registry:3.0.0@sha256:cd92709b4191c5779cd7215ccd695db6c54652e7a62843197e367427efb84d0e
          ports:
            - name: registry-port
              containerPort: 5000
          volumeMounts:
            - name: registry-storage
              mountPath: /var/lib/registry
            - name: config-volume
              mountPath: /etc/distribution
              readOnly: true
      volumes:
        - name: registry-storage
          persistentVolumeClaim:
            claimName: registry-pvc
        - name: config-volume
          projected:
            sources:
              - configMap:
                  name: registry-config
                  items:
                    - key: config.yaml
                      path: config.yml
      restartPolicy: Always
